<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/name_login_desc"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="100dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/agencyfb"
            android:gravity="center"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textColor="@color/monk3y_purple1"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/agencyfb"
                android:gravity="center_horizontal"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:textColor="@color/purple_700"
                android:textColorHint="@color/purple_200"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/agencyfb"
                android:gravity="center"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:textColor="@color/purple_700"
                android:textColorHint="@color/purple_200"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bmi_reset"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginStart="75dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/register_button_background"
                android:focusable="true"
                android:fontFamily="@font/agencyfb"
                android:gravity="center"
                android:onClick="register"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/bmi_calculate"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="75dp"
                android:layout_weight="1"
                android:background="@color/submit_button_background"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/agencyfb"
                android:gravity="center"
                android:onClick="submit"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/login_hint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/agencyfb"
            android:onClick="forgot"
            android:text="@string/hint_login"
            android:textAlignment="center"
            android:textColor="@color/monk3y_purple1"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>