<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/agencyfb"
            android:gravity="center"
            android:text="@string/menu_title"
            android:textAlignment="center"
            android:textColor="@color/monk3y_purple1"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/bmi_menu"
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_margin="10dp"
            android:background="@color/monk3y_purple1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/agencyfb"
            android:gravity="center"
            android:onClick="bmi_onclick"
            android:text="@string/bmi_menu"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/intake_menu"
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_margin="10dp"
            android:background="@color/monk3y_purple1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/agencyfb"
            android:gravity="center"
            android:onClick="intake_onclick"
            android:text="@string/intake_menu"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/output_menu"
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_margin="10dp"
            android:background="@color/monk3y_purple1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/agencyfb"
            android:gravity="center"
            android:onClick="output_onclick"
            android:text="@string/output_menu"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/about_menu"
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_margin="10dp"
            android:background="@color/monk3y_purple1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/agencyfb"
            android:gravity="center"
            android:onClick="about_onclick"
            android:text="@string/about_menu"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/hint_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/agencyfb"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>