<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bmi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bmi_title"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/agencyfb"
            android:gravity="center"
            android:text="@string/bmi_title"
            android:textAlignment="center"
            android:textColor="@color/monk3y_purple1"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bmi_height"
                android:layout_width="100dp"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/agencyfb"
                android:gravity="center_vertical"
                android:text="@string/bmi_height"
                android:textColor="@color/monk3y_purple1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/agencyfb"
                android:gravity="center_horizontal"
                android:hint="@string/bmi_height_hint"
                android:inputType="number"
                android:textColor="@color/purple_700"
                android:textColorHint="@color/purple_200"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bmi_weight"
                android:layout_width="100dp"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/agencyfb"
                android:gravity="center_vertical"
                android:text="@string/bmi_weight"
                android:textColor="@color/monk3y_purple1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/agencyfb"
                android:gravity="center"
                android:hint="@string/bmi_weight_hint"
                android:inputType="number"
                android:textColor="@color/purple_700"
                android:textColorHint="@color/purple_200"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bmi_reset"
                android:layout_width="100dp"
                android:layout_height="46dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="10dp"
                android:background="@color/register_button_background"
                android:focusable="true"
                android:fontFamily="@font/agencyfb"
                android:gravity="center"
                android:onClick="reset"
                android:text="@string/bmi_reset"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/bmi_calculate"
                android:layout_width="125dp"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="60dp"
                android:background="@color/submit_button_background"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/agencyfb"
                android:gravity="center"
                android:onClick="calculate"
                android:text="@string/bmi_calculate"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/bmi_hint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:clickable="false"
            android:fontFamily="@font/agencyfb"
            android:textAlignment="center"
            android:textColor="@color/monk3y_purple1"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>